# shi-lab-organoid-analysis

./: README.md  analyze_data.py  analyze_data_timeseries.py  analyze_images.py  check_segmentation.py  core_utils.py  process_files.py  pyproject.toml  requirements.txt  segmentation.py
analysis/: 202603xx_Run01_OIC267.py  20260702_Run02_OIC334.py  20260706_Run03_OIC334.py
shared/: analyze_images.py  check_segmentation.py
