[project]
name = "shi-lab-organoid-analysis"
version = "0.1.0"
description = "Scripts and functions to analyze organoid images."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "organoid-analyzer",
    "pandas>=3.0.3",
    "scikit-image>=0.26.0",
    "scipy>=1.18.0",
    "tqdm>=4.68.3",
    "xarray>=2026.4.0",
]

[tool.uv.sources]
organoid-analyzer = { path = "../../Toolboxes/brightfield-organoid-analyzer", editable = true }

[build-system]
requires = ["uv_build>=0.11.26,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "shared"
module-root = ""  # Explicitly targets "shared" in the project root folder